--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -87,13 +87,13 @@
         <nav class="collapse navbar-collapse navbar-right" role="Navigation">
           <ul id="nav" class="nav navbar-nav navigation-menu">
             <li><a data-scroll href="{% url 'actionplan:home' %}">Home</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #about %}">About</a></li>
+            <li><a data-scroll href="{% url 'actionplan:home' %}">About</a></li>
             <li><a data-scroll href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #services %}">Sectors</a></li>
+            <li><a data-scroll href="{% url 'actionplan:home' %}">Sectors</a></li>
             <li><a class="active" data-scroll href="{% url 'actionplan:incentives' %}">Incentives</a></li>
             <li><a data-scroll href="{% url 'actionplan:structure' %}">Structure</a></li>
             <li><a data-scroll href="{% url 'actionplan:partners' %}">Partners</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #contact %}">Contact</a></li>
+            <li><a data-scroll href="{% url 'actionplan:home' %}">Contact</a></li>
           </ul>
         </nav>
         <!-- /main nav -->
