--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,286 +1,133 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-  <!--<![endif]-->
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta
-      name="description"
-      content="Meghna One page parallax responsive HTML Template "
-    />
+<html lang="en">
 
-    <meta name="author" content="Muhammad Morshed" />
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Action Plan | Abhyuday,IIT Bombay</title>
+  <title>Structure | Abhyuday</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Mobile Specific Meta
-		================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Favicons -->
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon_blue.png' %}" />
 
-    <!-- CSS
-		================================================== -->
-    <!-- Fontawesome Icon font -->
-    <link rel="stylesheet" href="{% static 'plugins/themefisher-font/style.css' %}"/>
-    <!-- bootstrap.min css -->
-    <link
-      rel="stylesheet"
-      href="{% static 'plugins/bootstrap/dist/css/bootstrap.min.css' %}"
-    />
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="{% static 'plugins/animate-css/animate.css' %}" />
-    <!-- Magnific popup css -->
-    <link
-      rel="stylesheet"
-      href="{% static 'plugins/magnific-popup/dist/magnific-popup.css' %}"
-    />
-    <!-- Slick Carousel -->
-    <link rel="stylesheet" href="{% static 'plugins/slick-carousel/slick/slick.css' %}" />
-    <link
-      rel="stylesheet"
-      href="{% static 'plugins/slick-carousel/slick/slick-theme.css' %}"
-    />
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="{% static 'assets/css1/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css1/structure.css' %}" />
-  </head>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 
-  <body id="body" data-spy="scroll" data-target=".navbar" data-offset="50">
-    <header id="navigation" class="navbar navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <!-- responsive nav button -->
-          <button
-            type="button"
-            class="navbar-toggle"
-            data-toggle="collapse"
-            data-target=".navbar-collapse"
-          >
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- /responsive nav button -->
+  <!-- Vendor CSS Files -->
+  <link href="assetsm&s/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-          <!-- logo -->
-            <img src="{% static 'assets/img/logo.png' %}" style="width: 8em" alt=""/>
-          <!-- /logo -->
-        </div>
+  <!-- Template Main CSS File -->
+  <link href="assetsm&s/css/structure.css" rel="stylesheet">
+</head>
 
-        <!-- main nav -->
-        <nav class="collapse navbar-collapse navbar-right" role="Navigation">
-          <ul id="nav" class="nav navbar-nav navigation-menu">
-            <li><a data-scroll href="{% url 'actionplan:home' %}">Home</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #about %}">About</a></li>
-            <li><a data-scroll href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #services %}">Sectors</a></li>
-            <li><a data-scroll href="{% url 'actionplan:incentives' %}">Incentives</a></li>
-            <li>
-              <a class="active" data-scroll href="{% url 'actionplan:structure' %}">Structure</a>
-            </li>
-            <li><a data-scroll href="{% url 'actionplan:partners' %}">Partners</a></li>
-            <li><a data-scroll href="{% url 'actionplan:home' #contact-us %}">Contact</a></li>
-          </ul>
-        </nav>
-        <!-- /main nav -->
+<body>
+    <div style="height: 2px; background-color: black; text-align: center; font-size: 52px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #0f394c;
+    text-transform: uppercase; 
+    text-align:center; margin-top: 2rem; margin-bottom: 2rem;
+    ">
+        <span style="background-color: #f9f9f9; position: relative; top: -0.5em;">
+            &nbsp; STRUCTURE &nbsp;
+        </span>
       </div>
-    </header>
-
-    <br /><br />
-      <section class= "struct">
-    <div class="container">
-      <div class="main-timeline">
-        <!-- start experience section-->
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month"
-                  >14 Oct -<br />
-                  20 Nov</span
-                >
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Launch of Competition and Playbook Submission</h5>
+    
+    <div class="entries">
+        <div class="entry">
+          <div class="title big">26|09</div>
+          <div class="body">
+            <p>ActionPlan Launch</p>
           </div>
         </div>
-        <!-- end experience section-->
-
-        <!-- start experience section-->
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month"
-                  >17 Oct -<br />
-                  14th Nov</span
-                >
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Pan India Workshop</h5>
+        <div class="entry">
+          <div class="title">26|09 - 24|10</div>
+          <div class="body">
+            <p>Entrepreneurship workshops</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month">4th Dec</span>
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">
-              First-Round Conclusion and Result Announcement
-            </h5>
+        <div class="entry">
+          <div class="title big">26|10</div>
+          <div class="body">
+            <p>Registration deadline</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month"
-                  >5th Dec -<br />
-                  12th Dec</span
-                >
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Mentor Allocation</h5>
+        <div class="entry">
+          <div class="title">6|11</div>
+          <div class="body">
+            <p>Questionnaire submission deadline</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month"
-                  >10th Dec -<br />
-                  21st of Jan</span
-                >
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Mentoring Period</h5>
+        <div class="entry">
+          <div class="title">20|11</div>
+          <div class="body">
+            <p>First round conclusion &</p>
+                <p>Result Announcement</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month">6th Dec -<br />1st Jan</span>
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Webinars</h5>
+        <div class="entry">
+          <div class="title">22|11 - 29|11</div>
+          <div class="body">
+            <p>Mentor Allocation</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month">15th Jan</span>
-              </span>
-            </div>
-          </div>
-          <div class="timeline-content">
-            <h5 class="title">Round 2 Conclusion and Result Declaration</h5>
+        <div class="entry">
+          <div class="title big">22|11 - 7|12</div>
+          <div class="body">
+            <p>Advanced Entrepreneurship Bootcamp</p>
           </div>
         </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month">3rd Week<br />of Jan</span>
-              </span>
+        <div class="entry">
+            <div class="title big">29|09 - 2|1</div>
+            <div class="body">
+              <p>Mentoring Period</p>
             </div>
           </div>
-          <div class="timeline-content">
-            <h5 class="title">Mentor-Mentee Meetup</h5>
-          </div>
-        </div>
-
-        <div class="timeline">
-          <div class="icon"></div>
-          <div class="date-content">
-            <div class="date-outer">
-              <span class="date">
-                <span class="month">4th Week<br />of Jan</span>
-              </span>
+          <div class="entry">
+            <div class="title">19|12</div>
+            <div class="body">
+              <p>Solution handbook deadline</p>
             </div>
           </div>
-          <div class="timeline-content">
-            <h5 class="title">Final Pitching</h5>
+          <div class="entry">
+            <div class="title big">30|12</div>
+            <div class="body">
+              <p>Round 2 result</p>
+            </div>
           </div>
-        </div>
-      </div>
+          <div class="entry">
+            <div class="title">Jan 2nd week</div>
+            <div class="body">
+              <p>Final Action plan Submission</p>
+            </div>
+          </div>
+          <div class="entry">
+            <div class="title">Jan 2nd week</div>
+            <div class="body">
+              <p>Mentor mentee meetup</p>
+            </div>
+          </div>
+          <div class="entry">
+            <div class="title big">Social Fest</div>
+            <div class="body">
+              <p>Final Pitching round</p>
+            </div>
+          </div>
+          <div class="entry">
+            <div class="title">-</div>
+            <div class="body">
+              <p>Final Result</p>
+            </div>
+          </div>
     </div>
-      </section>
-      <footer  class="bg-one">
-      <div class="container">
-        <div class="row wow fadeInUp" data-wow-duration="500ms">
-          <div class="col-lg-12">
-            <!-- copyright -->
-            <div class="copyright text-center">
-              <div class="rights">
-                <p>&copy 2020 ABHYUDAY, IIT BOMBAY, ALL RIGHTS RESERVED</p>
-              </div>
-              <!-- Footer Social Links -->
-              <div class="social-icon">
-                <ul class="list-inline">
-                  <li>
-                    <a href="#"><i class="tf-ion-social-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="tf-ion-social-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="tf-ion-social-youtube"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="tf-ion-social-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="tf-ion-social-instagram"></i></a>
-                  </li>
-                </ul>
-              </div>
-              <!--/. End Footer Social Links -->
-            </div>
-            <!-- /copyright -->
-          </div>
-          <!-- end col lg 12 -->
-        </div>
-        <!-- end row -->
-      </div>
-      <!-- end container -->
-    </footer>
-      
-      
-  </body>
+
+  
+  <!-- Vendor JS Files -->
+  <script src="assetsm&s/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Template Main JS File -->
+</body>
+
 </html>
