--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -34,7 +34,7 @@
           <h2>Mentors stand to gain the satisfaction of making a difference in a fledgling entrepreneur's life and contributing back to society. In addition, they also get to keep in touch with new technologies, people, and networks by working with the young entrepreneurs.Action plan teams come from different parts of the country and thus through this competition, mentors are able to get in touch with the local problems prevailing elsewhere in the country.<h2>
             <div class="col-sm-12">
               <h2>As a mentor, you will not only guide students in developing an action plan of a particular social problem but also you will get an exposure of many social clashes and issues happening in different localities of India. You will be mentoring around 2-3 teams working in a sector that aligns with your field of work. The interaction with the teams will be online and the time invested would be around 1 to 2 hours per week.To know more, contact us</h2>
-              <div><a href="#" class="btn-get-started scrollto">Be A Mentor - Register Now</a></div>
+              <div><a href="{% url 'actionplan:mentor-register' %}" class="btn-get-started scrollto">Be A Mentor - Register Now</a></div>
             </div>
           </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
