--- a/templates/partners.html
+++ b/templates/partners.html
@@ -87,7 +87,7 @@
           <li><a class="nav-link scrollto " href="sectors.html">Sectors</a></li>
           <li><a class="nav-link scrollto" href="incentives.html">Incentives</a></li>
           <li><a class="nav-link scrollto" href="structure.html">Structure</a></li>
-             <li><a class="nav-link scrollto" href="partners.html.html">Partners</a></li>
+             <li><a class="nav-link scrollto" href="partners.html">Partners</a></li>
              <li><a class="nav-link scrollto" href="index.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
