--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -16,10 +16,10 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assetsm&s/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'assetsm&s/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assetsm&s/css/structure.css" rel="stylesheet">
+  <link href="{% static 'assetsm&s/css/structure.css' %}" rel="stylesheet">
 </head>
 
 <body>
@@ -125,7 +125,7 @@
 
   
   <!-- Vendor JS Files -->
-  <script src="assetsm&s/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'assetsm&s/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Template Main JS File -->
 </body>
