--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incentives</title>
 
-    <link rel="stylesheet" href="incentives.css">
+    <link rel="stylesheet" href="{% static 'incentives.css' %}">
 </head>
 <body>
-    
 
   <div class="content">
     <h1 class="heading">Incentives</h1>
