--- a/templates/index.html
+++ b/templates/index.html
@@ -35,14 +35,14 @@
           <nav id="navbar" class="navbar">
             <ul>
               <li><a class="nav-link scrollto active" href="{% url 'actionplan:home' %}">Home</a></li>
-              <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">About</a></li>
+              <li><a class="nav-link scrollto" href="#about">About</a></li>
                 <li><a class="nav-link scrollto" href="{%  url 'actionplan:mentor-view' %}">Mentorship</a></li>
               <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
               <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
               <li><a class="nav-link scrollto" href="{% url 'actionplan:structure' %}">Structure</a></li>
 
              <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
-            <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">Contact</a></li>
+            <li><a class="nav-link scrollto" href="#contact-us">Contact</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav>
@@ -714,7 +714,7 @@ fsEnter.addEventListener('click', function (e) {
       </div>
     </section><!-- End Featured Services Section -->
 
-     <section id="services" class="services section-bg">
+     <section id="about" class="services section-bg">
       <div class="container">
 
         <div class="section-title">
