--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -480,15 +480,15 @@ Pixel Grid
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">Home</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">About</a></li>
+          <li><a class="nav-link scrollto" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
             <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
           <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
             <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
           
           <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
-           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">Contact</a></li>
+           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
