--- a/templates/index.html
+++ b/templates/index.html
@@ -885,7 +885,7 @@ fsEnter.addEventListener('click', function (e) {
       <div class="container">
 
         <div class="section-title " >
-          <span>Frequently asked Quetions</span>
+          <span>Frequently Asked Quetions</span>
         </div>
         <div class="row section-title">
 
@@ -930,14 +930,14 @@ fsEnter.addEventListener('click', function (e) {
                 </p>
                 <div class="panel1">
                   <p class="parafaq">
-                    There is NO registration/participation fee.
+                    There is no registration/participation fee.
                   </p>
                 </div>
                 
                 <p class="faq1" style="margin-bottom: 12px;">WHAT IS THE LAST DATE FOR REGISTRATION?</p>
                 <div class="panel1">
                   <p class="parafaq">
-                    The last date for registration is 20th November 2020.
+                    The last date for registration is 26th October 2021.
                   </p>
                 </div>
               
@@ -945,16 +945,6 @@ fsEnter.addEventListener('click', function (e) {
                 <div class="panel1">
                   <p class="parafaq">
                     Yes, you can submit extra document along with your playbook.
-                  </p>
-                </div>
-              
-                <p class="faq1" style="margin-bottom: 12px;">
-                  HOW CAN I CONFIRM THAT I HAVE SUBMITTED THE PLAYBOOK?
-                </p>
-                <div class="panel1">
-                  <p class="parafaq">
-                    After submitting your entry, you will see a page confirming
-                    the receipt of your playbook along with a confirmation mail.
                   </p>
                 </div>
              
@@ -970,21 +960,13 @@ fsEnter.addEventListener('click', function (e) {
               </ul>
               <!-- /plan description -->
 
-              <!-- signup button -->
-
-              <!-- /signup button -->
             </div>
           </div>
           <!-- end single pricing table -->
 
           <!-- single pricing table -->
-          <div
-            class="col-md-6 text-center wow fadeInUp"
-            data-wow-duration="200ms"
-          >
+          <div class="col-md-6 text-center wow fadeInUp" data-wow-duration="200ms">
             <div class="price-item" style="text-align: start;">
-              <!-- plan name & value -->
-              <!-- /plan name & value -->
 
               <!-- plan description -->
               <ul>
@@ -1036,15 +1018,6 @@ fsEnter.addEventListener('click', function (e) {
                 </div>
                
                 <p class="faq1" style="margin-bottom: 12px;">
-                  ONE OF MY QUERIES LEFT UNANSWERED, WHOM DO I CONTACT?
-                </p>
-                <div class="panel1">
-                  <p class="parafaq">
-                    You can drop a mail at competitions@abhyudayiitb.org
-                  </p>
-                </div>
-               
-                <p class="faq1" style="margin-bottom: 12px;">
                   WHAT IS THE ELIGIBILTY CRITERIA TO PARTICIPATE?
                 </p>
                 <div class="panel1">
@@ -1071,79 +1044,70 @@ fsEnter.addEventListener('click', function (e) {
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+      <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
           <span>Testimonials</span>
-        
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper" style="height: auto;">
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <p style="color:black">
-                 "The entire program and its architecture related to Abhyuday by IIT Bombay is not only
-innovative but also well structured and scientifically administered where elements of
-creativity with sound sense of organizational ability is judged. I have been been
-fortunate to be associated with initiative that is aimed at promoting social
-entrepreneurship. Most important part is efforts and constant follow up undertaken by
-Abhyuday team. The commedation goes to Professor in charge of Abhyuday,Centre
-Manager, students, volunteers and entire Abhyuday team who put in real hard work to
-make competition qualitative."
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Abhyuday provided us a great platform of Action Plan, where we got an opportunity
+                    to learn through workshop from the expert and Mentor connect helped us for getting
+                    critical feedback on the startup during the mentoring session. Even in a virtual mode,
+                    the event was structure well and we made good connection with co-participants.
+                    The finale of the event had prominent jury panel from social sectors which helped
+                    us get valuable feedback. Overall, a great effort by team Abhyuday, IIT Bombay in
+                    current challenging time
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">
-                <h3>Dr. A K S Suryavanshi</h3>
-                <h4>Dean National Institute of Food Technology Entrepreneurship and Management</h4>
+                <h3>Pacify</h3>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <p style="color:black">
-                  “Abhyuday provided us a great platform of Action Plan, where we got an opportunity
-to learn through workshop from the expert and Mentor connect helped us for getting
-critical feedback on the startup during the mentoring session. Even in a virtual
-mode, the event was structure well and we made good connection with coparticipants. The finale of the event had prominent jury panel from social sectors
-which helped us get valuable feedback. Overall, a great effort by team Abhyuday, IIT
-Bombay in current challenging time"
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    The event was engaging and very well organised. Even with the difficulties involved
+                    with the online procedures, the Abhyuday team was able to execute the competition
+                    efficiently. What made it special was the vision to empower youth to act responsibly.
+                    Our experience was enriching, owing to the very experienced judges who helped us with the insights.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-2.jpg' %}" class="testimonial-img" alt="">
-                <h3>Saiprasad Poyareka</h3>
-                <h4>Team Pacify, Winner</h4>
+                <h3>Asbah</h3>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <p style="color:black">
-                  “The event was engaging and very well organised. Even with the difficulties involved
-with the online procedures, the Abhyuday team was able to execute the competition
-efficiently. What made it special was the vision to empower youth to act responsibly.
-Our experience was enriching, owing to the very experienced judges who helped us
-with the insights."
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-3.jpg' %}" class="testimonial-img" alt="">
-                <h3>Team Asbah</h3>
-                <h4>Second runner-up</h4>
+                <h3>Jena Karlis</h3>
               </div>
             </div><!-- End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item --
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -1152,18 +1116,114 @@ with the insights."
                   Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="{% static 'assets/img/testimonials/testimonials-5.jpg' %}" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
             </div><!-- End testimonial item -->
 
           </div>
-          
+          <div class="swiper-pagination"></div>
         </div>
 
       </div>
     </section><!-- End Testimonials Section -->
+
+<!--    &lt;!&ndash; ======= Testimonials Section ======= &ndash;&gt;-->
+<!--    <section id="testimonials" class="testimonials section-bg">-->
+<!--      <div class="container">-->
+
+<!--        <div class="section-title">-->
+<!--          <span>Testimonials</span>-->
+<!--        -->
+<!--        </div>-->
+
+<!--        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">-->
+<!--          <div class="swiper-wrapper">-->
+
+<!--            <div class="swiper-slide">-->
+<!--              <div class="testimonial-item">-->
+<!--                <p style="color:black">-->
+<!--                 "The entire program and its architecture related to Abhyuday by IIT Bombay is not only-->
+<!--innovative but also well structured and scientifically administered where elements of-->
+<!--creativity with sound sense of organizational ability is judged. I have been been-->
+<!--fortunate to be associated with initiative that is aimed at promoting social-->
+<!--entrepreneurship. Most important part is efforts and constant follow up undertaken by-->
+<!--Abhyuday team. The commedation goes to Professor in charge of Abhyuday,Centre-->
+<!--Manager, students, volunteers and entire Abhyuday team who put in real hard work to-->
+<!--make competition qualitative."-->
+<!--                </p>-->
+<!--                <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">-->
+<!--                <h3>Dr. A K S Suryavanshi</h3>-->
+<!--                <h4>Dean National Institute of Food Technology Entrepreneurship and Management</h4>-->
+<!--              </div>-->
+<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
+
+<!--            <div class="swiper-slide">-->
+<!--              <div class="testimonial-item">-->
+<!--                <p style="color:black">-->
+<!--                  “Abhyuday provided us a great platform of Action Plan, where we got an opportunity-->
+<!--to learn through workshop from the expert and Mentor connect helped us for getting-->
+<!--critical feedback on the startup during the mentoring session. Even in a virtual-->
+<!--mode, the event was structure well and we made good connection with coparticipants. The finale of the event had prominent jury panel from social sectors-->
+<!--which helped us get valuable feedback. Overall, a great effort by team Abhyuday, IIT-->
+<!--Bombay in current challenging time"-->
+<!--                </p>-->
+<!--                <img src="{% static 'assets/img/testimonials/testimonials-2.jpg' %}" class="testimonial-img" alt="">-->
+<!--                <h3>Saiprasad Poyareka</h3>-->
+<!--                <h4>Team Pacify, Winner</h4>-->
+<!--              </div>-->
+<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
+
+<!--            <div class="swiper-slide">-->
+<!--              <div class="testimonial-item">-->
+<!--                <p style="color:black">-->
+<!--                  “The event was engaging and very well organised. Even with the difficulties involved-->
+<!--with the online procedures, the Abhyuday team was able to execute the competition-->
+<!--efficiently. What made it special was the vision to empower youth to act responsibly.-->
+<!--Our experience was enriching, owing to the very experienced judges who helped us-->
+<!--with the insights."-->
+<!--                </p>-->
+<!--                <img src="{% static 'assets/img/testimonials/testimonials-3.jpg' %}" class="testimonial-img" alt="">-->
+<!--                <h3>Team Asbah</h3>-->
+<!--                <h4>Second runner-up</h4>-->
+<!--              </div>-->
+<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
+
+<!--           <div class="swiper-slide">-->
+<!--              <div class="testimonial-item">-->
+<!--                <p>-->
+<!--                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
+<!--                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.-->
+<!--                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
+<!--                </p>-->
+<!--                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">-->
+<!--                <h3>Matt Brandon</h3>-->
+<!--                <h4>Freelancer</h4>-->
+<!--              </div>-->
+<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
+
+<!--            <div class="swiper-slide">-->
+<!--              <div class="testimonial-item">-->
+<!--                <p>-->
+<!--                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
+<!--                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.-->
+<!--                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
+<!--                </p>-->
+<!--                <img src="{% static 'assets/img/testimonials/testimonials-5.jpg' %}" class="testimonial-img" alt="">-->
+<!--                <h3>John Larson</h3>-->
+<!--                <h4>Entrepreneur</h4>-->
+<!--              </div>-->
+<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
+
+<!--          </div>-->
+<!--          -->
+<!--        </div>-->
+
+<!--      </div>-->
+<!--    </section>&lt;!&ndash; End Testimonials Section &ndash;&gt;-->
+
+
+
  <section id="contact-us" class="contact-us section-bg">
       <div class="container">
         <div class="row">
