--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -6,12 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incentives</title>
 
+    <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+
+
     <link rel="stylesheet" href="{% static 'incentives.css' %}">
+  <link href="{% static 'navbar.css' %}" rel="stylesheet">
+
 </head>
 <body>
+<header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <img src="{% static 'assets/img/logo.png' %}" style="width: 8em" alt="" />
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
+            <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
+          <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
+            <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
+
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header>
+
 
   <div class="content">
-    <h1 class="heading">Incentives</h1>
     <p class="description"></p>
       </p><a class="card" href="#!">
       <div class="front" >
