--- a/templates/index.html
+++ b/templates/index.html
@@ -23,31 +23,36 @@
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
  <link rel="stylesheet" href="{% static 'css/fontawesome-all.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{% static 'navbar.css' %}" rel="stylesheet">
+
 
 </head>
 
 <body>
     <header id="header" class="fixed-top">
-        <div class="container d-flex align-items-center justify-content-between">
-          <a href="index.html" class="logo">
-              <img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid">
-          </a>
-          <nav id="navbar" class="navbar">
-            <ul>
-              <li><a class="nav-link scrollto active" href="{% url 'actionplan:home' %}">Home</a></li>
-              <li><a class="nav-link scrollto" href="#about">About</a></li>
-                <li><a class="nav-link scrollto" href="{%  url 'actionplan:mentor-view' %}">Mentorship</a></li>
-              <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
-              <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
-              <li><a class="nav-link scrollto" href="{% url 'actionplan:structure' %}">Structure</a></li>
+    <div class="container d-flex align-items-center justify-content-between">
 
-             <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
-            <li><a class="nav-link scrollto" href="#contact-us">Contact</a></li>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-          </nav>
-        </div>
-    </header>
+      <img src="{% static 'assets/img/logo.png' %}" style="width: 8em" alt="" />
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
+            <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
+          <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
+            <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
+
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header>
 
     <section>
 
@@ -652,6 +657,7 @@ fsEnter.addEventListener('click', function (e) {
     </script>
 </section>
   <!-- ======= Header ======= -->
+
  <!-- End Header -->
   
   <!-- ======= Hero Section ======= -->
@@ -1090,10 +1096,18 @@ fsEnter.addEventListener('click', function (e) {
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        “Action plan provided a wonderful opportunity filled with new learnings and great
+                        connections and keeping it open age event has given a diverse background a reality check
+                        for the work on their startups. At each level it gave me a new challenge which has helped
+                        my startup to a great extent. It is a platform which recognizes social work or
+                        entrepreneurship as a social sector for a better society at the same time it is very well
+                        structured and loaded with learnings. The event was judged on strictly defined parameters
+                        which actually helped us and all judges gave valuable feedback. We received valuable
+                        connections which also helped us post events. Overall, a great effort by team Abhyuday,
+                        IIT Bombay.”
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Jena Karlis</h3>
+                <h3>Team Bliscare</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -1101,11 +1115,16 @@ fsEnter.addEventListener('click', function (e) {
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                    I have been fortunate to be associated with an initiative
+                    that is aimed at providing social entrepreneurship. The entire
+                    program is not only innovative but also well structured and
+                    scientifically administered where elements of creativity with
+                    sound sense of organizational ability is judged. The commendation
+                    goes to the entire Abhyuday’s team who put in real hard work to make
+                    this competition qualitative.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Dr.A K S Suryavanshi - Dean(Student Welfare)</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -1113,11 +1132,14 @@ fsEnter.addEventListener('click', function (e) {
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                    Abhyuday provided us a great platform where we found like-minded people and
+                    organisations (in judging panels) trying to help social enterprises. That's what every social
+                    entrepreneur wants and that's exactly what the Action Plan provides us with.
+                    Mentor-connect by Abhyuday has played a huge role for us and I am sure the same is true
+                    for every participant in the Action Plan. Kudos to the Abhyuday team!!!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Team AIRTH</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -1127,101 +1149,6 @@ fsEnter.addEventListener('click', function (e) {
 
       </div>
     </section><!-- End Testimonials Section -->
-
-<!--    &lt;!&ndash; ======= Testimonials Section ======= &ndash;&gt;-->
-<!--    <section id="testimonials" class="testimonials section-bg">-->
-<!--      <div class="container">-->
-
-<!--        <div class="section-title">-->
-<!--          <span>Testimonials</span>-->
-<!--        -->
-<!--        </div>-->
-
-<!--        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">-->
-<!--          <div class="swiper-wrapper">-->
-
-<!--            <div class="swiper-slide">-->
-<!--              <div class="testimonial-item">-->
-<!--                <p style="color:black">-->
-<!--                 "The entire program and its architecture related to Abhyuday by IIT Bombay is not only-->
-<!--innovative but also well structured and scientifically administered where elements of-->
-<!--creativity with sound sense of organizational ability is judged. I have been been-->
-<!--fortunate to be associated with initiative that is aimed at promoting social-->
-<!--entrepreneurship. Most important part is efforts and constant follow up undertaken by-->
-<!--Abhyuday team. The commedation goes to Professor in charge of Abhyuday,Centre-->
-<!--Manager, students, volunteers and entire Abhyuday team who put in real hard work to-->
-<!--make competition qualitative."-->
-<!--                </p>-->
-<!--                <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">-->
-<!--                <h3>Dr. A K S Suryavanshi</h3>-->
-<!--                <h4>Dean National Institute of Food Technology Entrepreneurship and Management</h4>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
-
-<!--            <div class="swiper-slide">-->
-<!--              <div class="testimonial-item">-->
-<!--                <p style="color:black">-->
-<!--                  “Abhyuday provided us a great platform of Action Plan, where we got an opportunity-->
-<!--to learn through workshop from the expert and Mentor connect helped us for getting-->
-<!--critical feedback on the startup during the mentoring session. Even in a virtual-->
-<!--mode, the event was structure well and we made good connection with coparticipants. The finale of the event had prominent jury panel from social sectors-->
-<!--which helped us get valuable feedback. Overall, a great effort by team Abhyuday, IIT-->
-<!--Bombay in current challenging time"-->
-<!--                </p>-->
-<!--                <img src="{% static 'assets/img/testimonials/testimonials-2.jpg' %}" class="testimonial-img" alt="">-->
-<!--                <h3>Saiprasad Poyareka</h3>-->
-<!--                <h4>Team Pacify, Winner</h4>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
-
-<!--            <div class="swiper-slide">-->
-<!--              <div class="testimonial-item">-->
-<!--                <p style="color:black">-->
-<!--                  “The event was engaging and very well organised. Even with the difficulties involved-->
-<!--with the online procedures, the Abhyuday team was able to execute the competition-->
-<!--efficiently. What made it special was the vision to empower youth to act responsibly.-->
-<!--Our experience was enriching, owing to the very experienced judges who helped us-->
-<!--with the insights."-->
-<!--                </p>-->
-<!--                <img src="{% static 'assets/img/testimonials/testimonials-3.jpg' %}" class="testimonial-img" alt="">-->
-<!--                <h3>Team Asbah</h3>-->
-<!--                <h4>Second runner-up</h4>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
-
-<!--           <div class="swiper-slide">-->
-<!--              <div class="testimonial-item">-->
-<!--                <p>-->
-<!--                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
-<!--                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.-->
-<!--                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
-<!--                </p>-->
-<!--                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">-->
-<!--                <h3>Matt Brandon</h3>-->
-<!--                <h4>Freelancer</h4>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
-
-<!--            <div class="swiper-slide">-->
-<!--              <div class="testimonial-item">-->
-<!--                <p>-->
-<!--                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
-<!--                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.-->
-<!--                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
-<!--                </p>-->
-<!--                <img src="{% static 'assets/img/testimonials/testimonials-5.jpg' %}" class="testimonial-img" alt="">-->
-<!--                <h3>John Larson</h3>-->
-<!--                <h4>Entrepreneur</h4>-->
-<!--              </div>-->
-<!--            </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
-
-<!--          </div>-->
-<!--          -->
-<!--        </div>-->
-
-<!--      </div>-->
-<!--    </section>&lt;!&ndash; End Testimonials Section &ndash;&gt;-->
-
 
 
  <section id="contact-us" class="contact-us section-bg">
@@ -1297,7 +1224,7 @@ fsEnter.addEventListener('click', function (e) {
               <br style="font-weight: 300;" >  Abhyuday Office Student Activity Centre ( SAC ) IIT Bombay Zip
               Code - 400076</h5>
           </div>
-          <!-- end contact-secondary  <!-- end contact-secondary -->
+          <!--  end contact-secondary -->
         </div>
         <!-- end row -->
       </div>
