--- a/templates/partners.html
+++ b/templates/partners.html
@@ -46,12 +46,41 @@
   <link href="{% static 'assetspartners/assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assetspartners/assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
+
+
   <!-- Template Main CSS File -->
   <link href="{% static 'assetspartners/assets/css3/style.css' %}" rel="stylesheet">
+    <link href="{% static 'navbar.css' %}" rel="stylesheet">
+
 
   </head>
 
   <body>
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <img src="{% static 'assets/img/logo.png' %}" style="width: 8em" alt="" />
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
+            <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
+          <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
+            <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
+
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header>
+
 
   <section id="portfolio" class="portfolio">
       <div class="container">
