--- a/templates/structure.html
+++ b/templates/structure.html
@@ -18,11 +18,40 @@
   <!-- Vendor CSS Files -->
   <link href="{% static 'assetsm&s/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
+
+
   <!-- Template Main CSS File -->
   <link href="{% static 'assetsm&s/css/structure.css' %}" rel="stylesheet">
+    <link href="{% static 'navbar.css' %}" rel="stylesheet">
+
 </head>
 
 <body>
+<header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <img src="{% static 'assets/img/logo.png' %}" style="width: 8em" alt="" />
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
+            <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
+          <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
+            <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
+
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header>
+
     <div style="height: 2px; background-color: black; text-align: center; font-size: 52px;
     font-weight: 700;
     line-height: 56px;
