--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Template Main CSS File --
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
  <link rel="stylesheet" href="{% static 'css/fontawesome-all.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
